# coco

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  distribute.py  presets.py
coco/: Array.hpp  ArrayBuffer.hpp  ArrayConcept.hpp  Buffer.hpp  CMakeLists.txt  CMakeListsF4.txt  CStringConcept.hpp  Callback.hpp  ContainerConcept.hpp  Coroutine.hpp  Event.hpp  Frequency.hpp  InterruptQueue.hpp  IntrusiveList.hpp  IntrusiveMpscQueue.hpp  IntrusiveQueue.hpp  IsArray.hpp  IsSubclass.hpp  LinkedList.hpp  PointerConcept.hpp  PseudoRandom.hpp  Queue.hpp  Semaphore.hpp  StreamOperators.hpp  String.hpp  StringBuffer.hpp  StringConcept.hpp  Task.hpp  Time.hpp  TimedTask.hpp  Unit.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  align.hpp  bits.hpp  convert.cpp  convert.hpp  debug.cpp  debug.hpp  (+1 more)
coco/cortex/coco/platform/: compiler.hpp  nvic.hpp  scb.hpp
coco/native/: Handler.cpp  Handler.hpp
coco/native/coco/platform/: File.hpp  Handler.cpp  Handler.hpp  compiler.hpp  debug.cpp
coco/nrf52/: gpio.hpp  platform.hpp
coco/nrf52/coco/platform/: Handler.hpp  cache.hpp  flash.hpp  gpio.hpp  platform.hpp  ppi.hpp  rng.hpp  rtc.hpp  spi.hpp  spim.hpp  timer.hpp  uart.hpp
coco/stm32/: patch.py
coco/stm32/coco/platform/: adcF0C0G0F3L4G4H5U3U5.hpp  adcF3F4.hpp  adcG4H5.hpp  backupC0.hpp  backupF0F3F4L4.hpp  backupG0G4H5U3U5.hpp  cacheC0G0F4L4G4.hpp  cacheF0F3.hpp  cacheH5U3U5.hpp  canG0G4H5U3U5.hpp  cordicG4H5U5.hpp  crcAll.hpp  dacF0F3F4.hpp  dacG0L4G4H5U3U5.hpp  dmaF0L0C0G0F1L1F3L4G4.hpp  dmaH5U3U5.hpp  dmaInfoC0G4.hpp  dmaInfoF0F3.hpp  dmaInfoF4.hpp  extiC0G0H5U3U5.hpp  extiF0F3F4.hpp  extiL4G4.hpp  flashC0G0L4G4U3.hpp  flashF0F3.hpp  flashH5U5.hpp  gpio.hpp  i2cF0C0G0F3L4G4H5U3U5.hpp  i2cF1L1F4.hpp  jump.hpp  qspiF4L4G4.hpp  rccC0G0.hpp  rccF0F1F3.hpp  rccH5.hpp  rccInfoC0G4.hpp  rccInfoF0F3.hpp  rccInfoF4.hpp  rccL4G4.hpp  rccU3U5.hpp  reset.hpp  rngG0F4L4G4H5U3U5.hpp  (+11 more)
coco/stm32c0/coco/platform/: adc.hpp  backup.hpp  can.hpp  crc.hpp  dac.hpp  dma.hpp  exti.hpp  i2c.hpp  platform.hpp  rcc.hpp  spi.hpp  timer.hpp  uart.hpp  usart.hpp  usbd.hpp
coco/stm32f0/: Handler.hpp
coco/stm32f0/coco/platform/: Handler.cpp  adc.hpp  cache.hpp  crc.hpp  dac.hpp  dma.hpp  exti.hpp  gpio.hpp  i2c.hpp  platform.cpp  platform.hpp  rcc.hpp  spi.hpp  timer.hpp  uart.hpp  usart.hpp  usbd.hpp
coco/stm32f3/coco/platform/: adc.hpp  crc.hpp  dac.hpp  dma.hpp  exti.hpp  flash.hpp  i2c.hpp  platform.hpp  rcc.hpp  spi.hpp  timer.hpp  uart.hpp  usart.hpp  usbd.hpp
coco/stm32f3/coco/platform/system/: startup_stm32f301x8.s  startup_stm32f302x8.s  startup_stm32f302xc.s  startup_stm32f302xe.s  startup_stm32f303x8.s  startup_stm32f303xc.s  startup_stm32f303xe.s  startup_stm32f318xx.s  startup_stm32f328xx.s  startup_stm32f334x8.s  startup_stm32f358xx.s  startup_stm32f373xc.s  startup_stm32f378xx.s  startup_stm32f398xx.s
coco/stm32f4/coco/platform/: adc.hpp  backup.hpp  can.hpp  crc.hpp  dac.hpp  dma.hpp  exti.hpp  flash.hpp  i2c.hpp  platform.hpp  qspi.hpp  rcc.hpp  rng.hpp  spi.hpp  timer.hpp  uart.hpp  usart.hpp  usbd.hpp
coco/stm32g0/coco/platform/: adc.hpp  backup.hpp  can.hpp  comp.hpp  crc.hpp  dac.hpp  dma.hpp  exti.hpp  i2c.hpp  platform.hpp  qspi.hpp  rcc.hpp  rng.hpp  spi.hpp  timer.hpp  uart.hpp  usbd.hpp  vref.hpp
coco/stm32g4/coco/platform/: adc.hpp  cache.hpp  can.hpp  comp.hpp  cordic.hpp  crc.hpp  dac.hpp  dma.hpp  exti.hpp  i2c.hpp  opamp.hpp  platform.hpp  qspi.hpp  rcc.hpp  rng.hpp  spi.hpp  timer.hpp  uart.hpp  usart.hpp  usbd.hpp  vref.hpp
coco/stm32g4/coco/platform/system/: startup_stm32g431xx.s  startup_stm32g441xx.s  startup_stm32g471xx.s  startup_stm32g473xx.s  startup_stm32g474xx.s  startup_stm32g483xx.s  startup_stm32g484xx.s  startup_stm32g491xx.s  startup_stm32g4a1xx.s  startup_stm32gbk1cb.s
coco/stm32h5/coco/platform/: adc.hpp  can.hpp  comp.hpp  cordic.hpp  crc.hpp  dac.hpp  dma.hpp  exti.hpp  flash.hpp  i2c.hpp  opamp.hpp  platform.hpp  rcc.hpp  rng.hpp  spi.hpp  timer.hpp  uart.hpp  usbd.hpp
coco/stm32l4/coco/platform/: adc.hpp  cache.hpp  can.hpp  crc.hpp  dac.hpp  dma.hpp  exti.hpp  flash.hpp  i2c.hpp  platform.hpp  qspi.hpp  rcc.hpp  rng.hpp  spi.hpp  timer.hpp  uart.hpp  usbd.hpp
coco/stm32u3/coco/platform/: adc.hpp  cache.hpp  can.hpp  comp.hpp  crc.hpp  dac.hpp  dma.hpp  exti.hpp  i2c.hpp  opamp.hpp  platform.hpp  rcc.hpp  rng.hpp  spi.hpp  timer.hpp  uart.hpp  usbd.hpp
support/conan/: README.md  configure.py_
support/conan/linux/profiles/: armgcc  armv7  armv8
support/conan/windows/: README.txt_  armgcc  armgcc-env  armv6  armv7  cpresets.txt  debug  default  presets.txt
support/conan/windows/profiles/: armv6
support/vscode/: README.txt  coco.natvis  conan-settings.json  presets.py
support/vscode/windows/: CMakeUserPresets.json
test/: CMakeLists.txt  CoroutineTest.cpp  IntrusiveMpscQueueTest.cpp  TaskTest.cpp  gTest.cpp  main.cpp
test/nrf52/: compileTest.cpp
test/stm32/: compileTest.cpp
